# incolumepy.flask.live_de_python_56

./: .replit  README.md  main.py  pyproject.toml  wsgi.py
src/: app.py  contact.py  db.py  views.py
src/static/css/: main.css
src/templates/: apresentation.html  base.html  contact.html  hello.html  index.html  langs.html  navbar.html
