[tool.poetry]
name = "site"
version = "0.1.0"
description = ""
authors = ["britodfbr <britodfbr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
flask-admin = "^1.5.8"
flask-sqlalchemy = "^2.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
